# llm-provider-failover-api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
app/: base_provider.py  failover_service.py  main.py  models.py  ollama_provider.py  openai_provider.py  registry.py
docs/: architecture.md
tests/: test_failover_service.py  test_main.py  test_ollama_provider.py  test_openai_provider.py
