[project]
name = "llm-provider-failover-api"
version = "0.1.0"
description = "FastAPI service for OpenAI/Ollama routing with provider failover."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn==0.41.0",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "openai==2.26.0",
    "python-dotenv==1.2.2",
]

[dependency-groups]
dev = [
    "mypy==1.18.2",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
files = ["app", "tests"]
pretty = true
show_error_codes = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
plugins = []

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["app.main"]
disallow_untyped_defs = false
